# notas-musicais

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 02_contribua.md  index.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
