[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Gabriel <lustosaki2@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.8"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
jinja2 = "^3.1.2"
mkdocs-macros-plugin = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x -vv --cov=notas_musicais"
coverage = "coverage html"